# quantdash-hs

./: AAPL.csv  LICENSE  README.md  flake.nix  quantdash-hs.cabal
src/: Api.hs  Backtest.hs  Main.hs
src/Backtest/: Conduit.hs
src/Common/: BacktestTypes.hs  Types.hs
src/Data/: Market.hs
src/Strategy/: MA.hs
src/Streaming/: JetStream.hs
