cabal-version:   3.0
name:            quantdash-hs
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Akshay Sachdeva
maintainer:      asachdeva@alumni.utexas.net
build-type:      Simple
extra-doc-files: README.md

executable quantdash-hs
  main-is:             Main.hs
  hs-source-dirs:      app, src
  build-depends:
      base >=4.14 && <5,
      servant,
      servant-server,
      warp,
      aeson,
      bytestring,
      text,
      vector,
      cassava,
      time,
      containers,
      wai
  default-language:    GHC2021
  other-modules:
    Api
    Backtest
    Common.Types
    Common.BacktestTypes
    Strategy.MA
    Data.Market


