cabal-version:   3.0
name:            quantdash-hs
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Akshay Sachdeva
maintainer:      asachdeva@alumni.utexas.net
build-type:      Simple
extra-doc-files: README.md

executable quantdash-hs
  main-is:             Main.hs
  hs-source-dirs:      app, src
  build-depends:
    base,
    aeson,
    servant,
    servant-server,
    warp,
    text,
    time,
    wai,
    vector,
    cassava,
    bytestring,
    conduit,
    http-client,
    http-client-tls,
    http-types,
    unordered-containers,
    containers

  default-language:    GHC2021
  other-modules:
    Api
    Common.Types
    Common.BacktestTypes
    Streaming.JetStream
    Strategy.MA
    Data.Market


